k8s-2/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chat-app
spec:
  selector:
    matchLabels:
      app: mongodb-app
  replicas: 1
  template:
    metadata:
      name: mongodb-pod
      namespace: chat-app
      labels:
        app: mongodb-app
    spec:
      containers:
      - name: chatapp-mongo-image
        image: mongo:latest
        ports:
        - containerPort: 27017
      volumes:
      - name: mongo-volume
        persistentVolumeClaim:
          claimName: mongo-pvc
